[package]
name = "servers"
version = "0.1.0"
authors = ["Pavel Khetagurov <khetagurow1@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

	

[dependencies]
rocket = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
rocket_contrib = "*"
lazy_static = "*"
mut_static = "*"